--- a/app/src/main/res/layout/fragment_task_success.xml
+++ b/app/src/main/res/layout/fragment_task_success.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".tasksuccess.TaskSuccessFragment">
 
-
     <TextView
         android:id="@+id/successTitle"
         android:layout_width="0dp"
@@ -100,6 +99,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/deep_yellow"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/continueButton"
