--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -36,14 +36,18 @@
 
             <TextView
                 android:id="@+id/challengeTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:text="AppWorks美食大挑戰"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                mapbox:layout_constraintEnd_toEndOf="parent"
                 mapbox:layout_constraintStart_toEndOf="@+id/challengeImage"
                 mapbox:layout_constraintTop_toTopOf="parent" />
 
@@ -52,9 +56,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:text="@string/no_gps"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                android:text="@string/no_gps"
                 mapbox:layout_constraintBottom_toBottomOf="@+id/locationIcon"
                 mapbox:layout_constraintStart_toEndOf="@+id/locationIcon"
                 mapbox:layout_constraintTop_toTopOf="@+id/locationIcon" />
