--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -208,4 +208,18 @@ tools:context=".profile.ProfileFragment">
         android:visibility="gone"
         mapbox:layout_constraintStart_toStartOf="@+id/notification"
         mapbox:layout_constraintTop_toTopOf="@+id/notification" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/deep_yellow"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="visible"
+        mapbox:layout_constraintBottom_toBottomOf="@+id/profileCompletedChallenges"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="@+id/profileCompletedChallenges" />
 </androidx.constraintlayout.widget.ConstraintLayout>
