--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -80,6 +80,16 @@
                 mapbox:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/image_placeholder" />
 
+            <ImageView
+                android:id="@+id/detailBackArrow"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_arrow_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/ChallengeTitle"
                 android:layout_width="wrap_content"
