--- a/app/src/main/res/layout/fragment_my_custom.xml
+++ b/app/src/main/res/layout/fragment_my_custom.xml
@@ -10,12 +10,14 @@
         android:id="@+id/myCustomRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
