--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,8 @@
     <color name="orange">#FF8C00</color>
     <color name="deep_yellow_no_change">#fcd340</color>
     <color name="grey">#8E8B81</color>
-    <color name="grey_cccccc">#cccccc</color>
+    <color name="grey_cccccc">#EBE7E7</color>
+    <color name="light_grey">#F8F5F5</color>
     <color name="food_type">#FFFFB907</color>
     <color name="history_type">#C6443B</color>
     <color name="couple_type">#F492B4</color>
