--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -169,15 +169,21 @@
 
     </com.mapbox.maps.MapView>
 
-    <ImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/myLocationIcon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/light_yellow"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_target"
+        mapbox:borderWidth="0dp"
         mapbox:layout_constraintBottom_toBottomOf="parent"
-        mapbox:layout_constraintEnd_toEndOf="parent" />
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:maxImageSize="35dp"
+        mapbox:tint="@android:color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
