--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -17,6 +17,23 @@
         mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/myLocationIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/light_yellow"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_target"
+        mapbox:borderWidth="0dp"
+        mapbox:elevation="6dp"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:maxImageSize="35dp"
+        mapbox:tint="@android:color/white" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/locationCardView"
         android:layout_width="match_parent"
@@ -26,6 +43,7 @@
         android:layout_marginBottom="10dp"
         android:visibility="gone"
         mapbox:cardCornerRadius="15dp"
+        mapbox:cardElevation="6.5dp"
         mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent">
@@ -107,10 +125,10 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:scaleType="centerCrop"
-                mapbox:shapeAppearance="@style/AllCornerStyle"
                 mapbox:layout_constraintBottom_toBottomOf="parent"
                 mapbox:layout_constraintStart_toStartOf="parent"
                 mapbox:layout_constraintTop_toTopOf="parent"
+                mapbox:shapeAppearance="@style/AllCornerStyle"
                 mapbox:srcCompat="@drawable/anya_icon" />
 
             <ImageView
@@ -168,22 +186,6 @@
         mapbox:mapbox_cameraZoom="7.0">
 
     </com.mapbox.maps.MapView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/myLocationIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/light_yellow"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/ic_target"
-        mapbox:borderWidth="0dp"
-        mapbox:layout_constraintBottom_toBottomOf="parent"
-        mapbox:layout_constraintEnd_toEndOf="parent"
-        mapbox:maxImageSize="35dp"
-        mapbox:tint="@android:color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
