--- a/app/src/main/res/layout/item_community_challenge.xml
+++ b/app/src/main/res/layout/item_community_challenge.xml
@@ -75,7 +75,7 @@
 
     <TextView
         android:id="@+id/communityChallengeRating"
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:ellipsize="end"
@@ -83,6 +83,7 @@
         android:shadowDx="1.5"
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
+        android:singleLine="true"
         android:text="5 (999)"
         android:textAllCaps="true"
         android:textColor="@color/white"
