--- a/app/src/main/res/layout/item_overview_task.xml
+++ b/app/src/main/res/layout/item_overview_task.xml
@@ -44,6 +44,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/overviewImageBorder"
         app:layout_constraintEnd_toEndOf="@+id/overviewImageBorder"
         app:layout_constraintStart_toStartOf="@+id/overviewImageBorder"
