--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,7 +86,7 @@ tools:context=".profile.ProfileFragment">
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:text="設定"
+        android:text="管理員選項"
         android:textColor="@color/black"
         android:textSize="18sp"
         mapbox:layout_constraintEnd_toEndOf="@+id/goToSettings"
