--- a/app/src/main/res/layout/item_verify_task.xml
+++ b/app/src/main/res/layout/item_verify_task.xml
@@ -44,6 +44,7 @@
         android:text="關卡指引"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verifyImage" />
 
@@ -56,6 +57,7 @@
         android:text="景點介紹"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verifyGuide" />
 
@@ -68,6 +70,7 @@
         android:text="關卡謎題"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/placeIntroduction" />
 
@@ -80,6 +83,7 @@
         android:text="謎題解答"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verifyQuestion" />
 
