--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -278,7 +278,7 @@
                 mapbox:layout_constraintTop_toBottomOf="@+id/stage" />
 
             <ImageView
-                android:id="@+id/myLocation"
+                android:id="@+id/originalLocation"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="8dp"
